# studojo

./: .deployment-trigger  .gitignore  .gitmodules  ADMIN_SETUP.md  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  README.rst  SECURITY_AUDIT.md  docker-compose.yml  go.mod  go.sum  monitor-logs.sh  package.json  redeploy.sh
.github/: CICD_SETUP.md  CI_CD_SETUP.md
doc/: ARCHITECTURE.md  README.md  api-conventions.md  architecture-overview.md  authentication.md  code-organization.md  database-patterns.md  deployment.md  instagram-carousel-design.md  messaging-patterns.md  observability.md  service-development.md  worker-patterns.md
docker/: localstack-init.sh
k8s/: .gitignore  AZURE_SETUP.md  README.md  azure-blob-lifecycle-policy.json  deploy.sh  guide.md  namespace.yaml  setup-ci-iam-manual.sh  setup-ci-iam.sh
scripts/: SECRETS_MANAGEMENT.md  build-and-deploy-frontend.sh  build-and-deploy-maverick.sh  delete-phone-users-k8s.sh  delete-phone-users.sh  deploy-maverick.sh  generate-example-previews.ts  generate-template-previews.ts  migrate-blogs.ts  migrate-resumes-to-drafts.sh  port-forward-postgres-bg.sh  port-forward-postgres.sh  run-blog-migration.sh  seed-resume-examples.ts  set-admin-user.sh  set-dev-user.sh  setup-blog-migration-data.sh  (+4 more)
services/humanizer-svc/: Dockerfile  README.rst  app.py  pyproject.toml
services/humanizer-svc/src/: __init__.py  deterministic_fixers.py  document_parser.py  final_assembler.py  issue_router.py  paragraph_humanizer.py  pipeline.py  sanity_diff_verifier.py  section_repair_agent.py  structure_extractor.py
(+192 files in other folders)
